# FlatSurvival

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/src/: CMakeLists.txt
engine/src/managers/: CMakeLists.txt
engine/src/managers/game_manager/: CMakeLists.txt
engine/src/managers/game_objects_manager/: CMakeLists.txt
engine/src/managers/gui_elements_manager/: CMakeLists.txt
engine/src/managers/states_manager/: CMakeLists.txt
engine/src/renderer/: CMakeLists.txt
engine/src/renderer/headers/: DeltaTimer.hpp  MousePosition.hpp  Renderer.hpp
engine/tests/: CMakeLists.txt
engine/tests_manual/: CMakeLists.txt  GameManager_test.cpp
game/src/: CMakeLists.txt
game/src/app/: CMakeLists.txt  main.cpp
game/src/game_objects/: CMakeLists.txt
game/src/states/: CMakeLists.txt
src/: CMakeLists.txt
src/App/: App.cpp  CMakeLists.txt  Game.cpp  Game.hpp  IGame.hpp
src/Config/: CMakeLists.txt  GlobalConfigTable.cpp  GlobalConfigTable.hpp
src/Game/: CMakeLists.txt
src/Game/GameObjects/: CMakeLists.txt
src/Game/GameStates/: CMakeLists.txt
src/Game/GameStates/States/: CMakeLists.txt
src/Game/GameStates/States/headers/: BaseState.hpp  GamePlayState.hpp  StateMainMenu.hpp
src/Game/GameStates/States/interfaces/: IState.hpp
src/Game/GameStates/States/src/: BaseState.cpp  GamePlayState.cpp  StateMainMenu.cpp
src/Game/Gui/: CMakeLists.txt
src/Game/ManagerBases/: CMakeLists.txt
src/Game/Resources/: CMakeLists.txt  TexturesManager.cpp  TexturesManager.hpp
src/Utils/: CMakeLists.txt  Log.hpp  Utils.cpp
(+58 files in other folders)
